update clicked items